<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <Button
            android:id="@+id/btn_select"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:text="Connect" />
        <Button
            android:id="@+id/btn_start_new_file"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:text="Start new file" />

        <TextView
            android:id="@+id/fileStatusText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:text="No file created." />

        <Button
            android:id="@+id/btnGO"
            android:text="Go"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:background="@drawable/buttonshape"
            android:shadowColor="#A8A8A8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="100"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_weight="0.31"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/RelativeLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="4.11"
            android:orientation="vertical" >

            <ListView
                android:id="@+id/listMessage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_above="@+id/ckBoxExpertMode">
            </ListView>

            <EditText
                android:id="@+id/sendText"
                android:layout_width="102dp"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_toLeftOf="@+id/sendButton"
                android:ems="10"
                android:enabled="false"
                android:fontFamily="1"
                android:lines="1"
                android:maxLength="20"
                android:maxLines="1"
                android:shadowRadius="1"
                android:layout_alignTop="@+id/sendButton"
                android:visibility="gone" />

            <Button
                android:id="@+id/sendButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="Send"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:visibility="gone" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Show data"
                android:id="@+id/ckBoxExpertMode"
                android:layout_gravity="right"
                android:checked="false"
                android:enabled="true"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true" />

        </RelativeLayout>
    </LinearLayout>

    
     <RelativeLayout
        android:id="@+id/annotationLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         android:visibility="gone">
        <Button
                android:id="@+id/state0_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" 
                android:layout_alignParentLeft="true"
                android:onClick="stateButtonClickHandler"
                android:text="@string/state0" />
        
         <Button
                android:id="@+id/state1_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"  
                android:layout_toRightOf="@id/state0_button"  
                android:onClick="stateButtonClickHandler"                                         
                android:text="@string/state1" />
          <Button
                android:id="@+id/state2_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"  
                android:layout_toRightOf="@id/state1_button"     
                android:onClick="stateButtonClickHandler"                                                       
                android:text="@string/state2" />
           <Button
                android:id="@+id/state3_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"   
                android:layout_alignParentLeft="true"                
                android:layout_below="@id/state0_button"   
                android:onClick="stateButtonClickHandler"                                                                                    
                android:text="@string/state3" />
           <Button
                android:id="@+id/state4_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"   
                android:layout_below="@id/state0_button"                                                                                      
                android:layout_toRightOf="@id/state3_button"   
                android:onClick="stateButtonClickHandler"                                                                                                                
                android:text="@string/state4" />
           <Button
                android:id="@+id/state5_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"  
                android:layout_below="@id/state0_button"                                                                                                      
                android:layout_toRightOf="@id/state4_button"  
                android:onClick="stateButtonClickHandler"                                                                                                                                              
                android:text="@string/state5" />
    </RelativeLayout>
    
    
    <RelativeLayout
        android:id="@+id/RelativeLayout12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/deviceLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/device" />

        <TextView
            android:id="@+id/deviceName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="18dp"
            android:layout_toRightOf="@+id/deviceLabel"
            android:text="@string/no_device"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/rssival"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:text="_"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </RelativeLayout>

</LinearLayout>
